Fix search filter and handle validation errors